--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-certifi==2021.10.8
-charset-normalizer==2.0.12
-idna==3.3
+Pillow==9.1.0
 python-dotenv==0.20.0
 requests==2.27.1
-urllib3==1.26.9
-websocket-client==1.3.2
-Pillow==9.1.0
+torpy==1.1.6
+websocket_client==1.3.2
